# JEPA-COMPILER

./: .gitignore  README.md
jepa-v2/: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
jepa-v2/checkpoints/: vocab.json
jepa-v2/docs/: loss_review.md  results_disentangle.md  results_gate_exebench.md
jepa-v2/docs/eval/: eval_div_report.json  eval_real_report.json
jepa-v2/docs/pitch/: index.html  investor_qa_prep.md  print.html
jepa-v2/scripts/: build_cache.py  eval_disentangle.py  pod.sh  probe_exebench.py  setup_pod.sh  train.py
jepa-v2/src/jepa_v2/: __init__.py  config.py  data.py  exebench.py  loss.py  model.py  programl_compat.py  splits.py  vicreg.py
